--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "ext-curl": "*"
     },
     "autoload":{
-        "psr-4": {"tempsms\\": ""}
+        "psr-4": {"tempsmsru\\": ""}
     },
     "license": "MIT",
     "authors": [
